# rewire

./: .gitignore  CONTRIBUTING.md  DEV_JOURNAL.md  LICENSE  PROJECT_CARD.json  PROJECT_SUMMARY.md  PROVENANCE.md  README.md  SESSION_LOG.md
.github/workflows/: test.yml
clojure/: deps.edn  tests.edn
clojure/src/rewire/: db.clj  notify.clj  rules.clj  server.clj
clojure/test/rewire/: db_test.clj  rules_test.clj
deploy/: example.env  install.sh  rewire.service
docs/: index.html
python/: README.md  pyproject.toml
python/rewire/: __init__.py  cli.py  db.py  invariants.py  notify.py  rules.py  server.py  simulate.py  webhooks.py
python/rewire_verify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/tests/: __init__.py  test_db.py  test_invariants.py  test_rules.py  test_webhooks.py
specs/: rewire.qnt  simulation.md
