[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rewire"
version = "0.1.0"
description = "Epistemic expectation verification for scheduled jobs and alert paths"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["monitoring", "cron", "scheduling", "alerts", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

[project.scripts]
rewire = "rewire.server:main"
rewire-ctl = "rewire.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rewire*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
