[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rewire-verify"
version = "0.1.0"
description = "Epistemic expectation verification for scheduled jobs and alert paths"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["monitoring", "cron", "scheduling", "alerts", "verification", "formal-methods"]
authors = [
    {name = "uprootiny", email = "uprootiny@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://uprootiny.github.io/rewire"
Repository = "https://github.com/uprootiny/rewire"
Documentation = "https://uprootiny.github.io/rewire"
Issues = "https://github.com/uprootiny/rewire/issues"

[project.scripts]
rewire = "rewire.server:main"
rewire-ctl = "rewire.cli:main"
rewire-check = "rewire.invariants:main"
rewire-sim = "rewire.simulate:run_schedule_simulation"

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rewire*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
